 HT ChangeLog
==============

version 0.8.0:
	- rewrite
	- new disassembler: PowerPC
	- many bugs fixed

version 0.7-trunk:
	- PowerPC (PPC) disassembler
	- ELF: PPC support
	- Mach-O file format support (header and image, PPC-only, experimental)
	- Big-endian COFF support
	- FLT (Flat) support (experimental)

version 0.7.3:
	- some keys were assigned to multiple commands in hex-viewer
	- percent display for searches and scrollbars in big files was incorrect
	- POSIX: improved keyboard handling (merge from 0.8.0 tree)
	- POSIX: X11 textmode keyboard support didn't work :-), was not configured correctly
	- configure now does final (release) builds by default (ie. -O2 -fomit-frame-pointer)
	
version 0.7.2:
	- Hexview: Number of bytes per line can be changed now
	- PE/header: can now follow bound import directory link (it's offset not RVA !)
	- x86dis: "0f 0f 0f" is now marked invalid (as it should be)
	- alt-x in blockop dialog was used twice by "cut" and "select expr"
	- fixed problem in streams that caused files not to be flagged "modified"
	- security fix: main.cc: strncpy(appname, argv[0], sizeof appname-1);
	- qword "x shl/shr 32" returns invalid result
	- ELF/section headers: flags now displayed correctly (thanks "scut")
	- (POSIX) slightly improved keyboard handling (Ctrl+W = close window)

version 0.7.1:
	- (win2k/xp) fixed bug that caused ht to create ht.cfg in current
	  directory instead of executable's
	- (win32) findfirst/next now fill the ctime, mtime and atime fields
	- (win32) chdir() to "X:\" fixed
	- cmdline param '-h' works again
	- new config.guess/config.sub

version 0.7.0:
	- whole new Address class for the analyser. Much more flexible.
	  Enables segmented and 64-bit addresses.
	- ht_snprintf/ht_vsnprintf + many possible buffer overflows fixed
	- projects (groups of files)
	- LE: image/analyser,VxD support, internal relocations (beta, no imports)
	- Java: disassembler, image/analyser
	- NE: relocations improved